Fix vertical align for comments' bubble for the mobile version

--- a/m/style.css
+++ b/m/style.css
@@ -524,6 +524,6 @@ ul.menu li a {
 	-moz-box-shadow: 0 1px 6px #888;
 	-webkit-box-shadow: 0 1px 6px #888;
 	box-shadow: 0 1px 6px #888;
-	line-height: 9px;
+	line-height: 8px;
 	font-size: 9px;
 }
